added font family

--- a/HTML Wireframe/css/styles.css
+++ b/HTML Wireframe/css/styles.css
@@ -3,6 +3,10 @@ html, body{
     margin: 0;
 }
 
+/* fonts
+font-family: 'Montserrat', sans-serif;
+font-family: 'Roboto', sans-serif; */
+
 .body-welcome{
     text-align: center;
 }
