--- a/HTML Wireframe/css/styles.css
+++ b/HTML Wireframe/css/styles.css
@@ -2,6 +2,7 @@ html, body{
     height: 100%;
     text-align: center;
     margin: auto;
+    background-color: #D06224;
 }
 
 button{
@@ -13,11 +14,59 @@ h1{
     margin: 2% auto;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
+    color: #151515;
+}
+
+h1:hover{
+    margin: 2% auto;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: #EEEEEE;
+}
+
+input.form-control, textarea.form-control{
+    background-color: #151515;
+}
+
+ul.navbar-nav.ms-auto.text-center{
+    padding: 0%;
+}
+
+a:hover{
+    background-color: #D06224;
+}
+
+nav[class="navbar navbar-expand-lg navbar-dark"]{
+    background-color: #151515;
+}
+
+nav.navbar.navbar-expand-lg.navbar-dark{
+    padding: 0;
+}
+
+nav.navbar.navbar-expand-lg.navbar-dark a.navbar-brand{
+    color: #EEEEEE;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    padding: 1%;
 }
 
 p{
     margin: 2% auto;
     font-family: 'Roboto', sans-serif;
+    font-size: 1rem;
+    color: #EEEEEE;
+}
+
+p:hover{
+    margin: 2% auto;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1rem;
+    color: #151515;
+}
+
+.btn.btn-outline-dark:hover{
+    background-color: #151515;
 }
 
 .col-md-6{
@@ -29,10 +78,27 @@ p{
     width: fit-content;
 }
 
+.container-fluid{
+    padding: 0;
+}
+
+.navbar-brand a, .navbar-nav.ms-auto.text-center li a{
+    color: #EEEEEE;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1rem;
+}
+
 .navbar-toggler{
     margin: 0;
 }
 
 .row{
     margin: 4% auto;
+}
+
+#fname:focus-within label, #lname:focus-within label, 
+#age:focus-within label, #gender:focus-within label, 
+#offense:focus-within label, #casedetails:focus-within label
+{
+    color: #EEEEEE;
 }
