--- a/HTML Wireframe/css/styles.css
+++ b/HTML Wireframe/css/styles.css
@@ -7,7 +7,7 @@ html, body{
 
 button{
     display: block;
-    margin: 4% auto;
+    margin: 2% auto;
 }
 
 h1, h2, h3, h4, li{
@@ -89,13 +89,14 @@ p:hover{
 
 .col-md-4{
     margin: 2% auto;
+    width: fit-content;
 }
 
 .container-fluid{
     padding: 0;
 }
 
-.navbar-brand a, .navbar-nav.ms-auto.text-center li a{
+ul.navbar-nav.ms-auto.text-center li a.nav-link{
     color: #EEEEEE;
     font-family: 'Roboto', sans-serif;
     font-size: 1rem;
