Created Homepage.html and Fix the url patterns and views

--- a/HTML Wireframe/djangoProject/offenderLocatorApp/static/css/styles.css
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/static/css/styles.css
@@ -115,6 +115,10 @@ p:hover{
     
 }
 
+.carousel{
+    width: 840px;
+    height: 560px;
+}
 
 #fname:focus-within label, #lname:focus-within label, 
 #age:focus-within label, #gender:focus-within label, 
