--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/filecomplaint.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/filecomplaint.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,24 +13,24 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>File A Complaint</title>
 </head>
 
 <body>
     <div class="container-fluid">
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="welcome.html">Offender Locator</a>
+            <a class="navbar-brand" href="/">Offender Locator</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
                 aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="hamburger">
                 <ul class="navbar-nav ms-auto text-center">
-                  <li><a class="nav-link" href="welcome.html">Home</a></li>
-                  <li><a class="nav-link" href="lookup.html">Lookup</a></li>
-                  <li><a class="nav-link" href="filecomplaint.html">File a complaint</a></li>
-                  <li><a class="nav-link" href="login.html">Login</a></li>
+                  <li><a class="nav-link" href="/">Home</a></li>
+                  <li><a class="nav-link" href="/lookup">Lookup</a></li>
+                  <li><a class="nav-link" href="/filecomplaint">File a complaint</a></li>
+                  <li><a class="nav-link" href="/login">Login</a></li>
                 </ul>
             </div>
         </nav>
