--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/forgot.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/forgot.html
@@ -9,27 +9,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>Offender Locator Reset</title>
-    
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="welcome.html">Offender Locator</a>
+        <a class="navbar-brand" href="/">Offender Locator</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
             aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="hamburger">
             <ul class="navbar-nav ms-auto text-center">
-              <li><a class="nav-link" href="welcome.html">Home</a></li>
-              <li><a class="nav-link" href="lookup.html">Lookup</a></li>
-              <li><a class="nav-link" href="filecomplaint.html">File a complaint</a></li>
-              <li><a class="nav-link" href="login.html">Login</a></li>
+              <li><a class="nav-link" href="/">Home</a></li>
+              <li><a class="nav-link" href="/lookup">Lookup</a></li>
+              <li><a class="nav-link" href="/filecomplaint">File a complaint</a></li>
+              <li><a class="nav-link" href="/login">Login</a></li>
             </ul>
         </div>
     </nav>
@@ -60,7 +57,7 @@
                 </div>
             </div><div class="row" id="nomargin">
                 <div class="col-md-4">
-                    <a href="login.html" class="link-light"><em>Login here!</em></a>
+                    <a href="/login" class="link-light"><em>Login here!</em></a>
                 </div>
             </div>
             </form>
@@ -68,6 +65,6 @@
         
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="JavaScript/script.js"></script>
+    <script src="{% static 'JavaScript/script.js' %}"></script>
 </body>
 </html>
