--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/login.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/login.html
@@ -20,17 +20,17 @@
 </head>
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="welcome.html">Offender Locator</a>
+        <a class="navbar-brand" href="/">Offender Locator</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
             aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="hamburger">
             <ul class="navbar-nav ms-auto text-center">
-              <li><a class="nav-link" href="welcome.html">Home</a></li>
-              <li><a class="nav-link" href="lookup.html">Lookup</a></li>
-              <li><a class="nav-link" href="filecomplaint.html">File a complaint</a></li>
-              <li><a class="nav-link" href="login.html">Login</a></li>
+              <li><a class="nav-link" href="/">Home</a></li>
+              <li><a class="nav-link" href="/lookup">Lookup</a></li>
+              <li><a class="nav-link" href="/filecomplaint">File a complaint</a></li>
+              <li><a class="nav-link" href="/login">Login</a></li>
             </ul>
         </div>
     </nav>
@@ -61,7 +61,7 @@
                     </div>
                 </div><div class="row" id="nomargin">
                     <div class="col-md-4">
-                        <a href="forgot.html" class="link-light"><em>Set new password here!</em></a>
+                        <a href="/reset" class="link-light"><em>Set new password here!</em></a>
                     </div>
                 </div>
             </form>
