--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/welcome.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/welcome.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container-fluid">
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="welcome.html">Offender Locator</a>
+            <a class="navbar-brand" href="/">Offender Locator</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#hamburger" 
                 aria-controls="hamburger" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -31,9 +31,47 @@
                 </ul>
             </div>
         </nav>
-        <div class="row" >
-            <div class="col-md-6" style="margin: auto;"><img class="rounded img-fluid" src="{% static 'Media/welcome_img.jpg' %}">
+        <div id="carouselExampleCaptions" class="carousel slide" style="margin: auto;" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1" ></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="{% static 'Media/welcome_img.jpg' %}" class="d-block w-100" data-interval="1000" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>Some representative placeholder content for the first slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        <!-- <div class="row" >
+            <div class="col-md-6" style="margin: auto;"><img class="rounded img-fluid" src="{% static 'Media/welcome_img.jpg' %}">
+            </div> -->
     
             <div class="col-md-6 ">
                 <div class="row">
