--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/login.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/login.html
@@ -44,6 +44,7 @@
                 </div>
             </div>
             <form onsubmit="event.preventDefault();return false">
+                {% csrf_token %}
                 <div class="row" id="nomargin">
                     <div class="col-md-4" id="loginpassword">
                         <label for="inputLoginPassword">Password :</label>
