--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
@@ -70,38 +70,28 @@
       <h2>SEARCH RESULTS:</h2>
       <div class="table-responsive-admin">
         <table id="lookupTable" class="table table-dark table-striped">
-          <tr>
-            <th>Offender's Name</th>
-            <th>Age</th>
-            <th>Gender</th>
-            <th>Offense</th>
-            <th>Offender ID</th>
-            <th>Case Status</th>
-          </tr>
-          <tr>
-            <td>John Doe</td>
-            <td>40</td>
-            <td>Male</td>
-            <td>Theft</td>
-            <td>0001</td>
-            <td>Ongoing</td>
-          </tr>
-          <tr>
-            <td>Joshua Yves Edellon</td>
-            <td>22</td>
-            <td>Male</td>
-            <td>Theft</td>
-            <td>0002</td>
-            <td>Ongoing</td>
-          </tr>
-          <tr>
-            <td>Renshi</td>
-            <td>22</td>
-            <td>Male</td>
-            <td>Libel</td>
-            <td>0003</td>
-            <td>Ongoing</td>
-          </tr>
+          <thead>
+            <tr>
+              <th scope="col">Offender's Name</th>
+              <th scope="col">Age</th>
+              <th scope="col">Gender</th>
+              <th scope="col">Offense</th>
+              <th scope="col">Offender ID</th>
+              <th scope="col">Case Status</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for k in data1 %}
+            <tr>
+              <th scope="row">{{k.offender}}</th>
+              <td>{{k.age}}</td>
+              <td>{{k.gender}}</td>
+              <td>{{k.gender}}</td>
+              <td>{{k.gender}}</td>
+              <td>{{k.gender}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
         </table>
       </div>
     </div>
