fixed removed excess codes

--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/filecomplaint.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/filecomplaint.html
@@ -46,14 +46,9 @@
                 <div class="col-md-6" style="margin: auto;">
                     <div class="row" id="nomargin">
                         <div class="col-md-6" id="fname">
-                            <label for="inputFname" class="form-label">First Name</label>
-                            <input name= "inputName" type="text" class="form-control" id="inputFname" placeholder="John"
+                            <label for="inputFname" class="form-label">Full Name</label>
+                            <input name= "inputName" type="text" class="form-control" id="inputFname" placeholder="John Doe"
                             aria-label="Offender First Name" required>
-                        </div>
-                        <div class="col-md-6" id="lname">
-                            <label for="inputLname" class="form-label">Last Name</label>
-                            <input type="text" class="form-control" id="inputLname" placeholder="Doe" name="inputsurname"
-                            aria-label="Offender Last Name" required>
                         </div>
                     </div>
                     <div class="row" id="nomargin">
