Added Create, Read and Update functions!

--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
@@ -83,7 +83,7 @@
               <td>{{items.age}}</td>
               <td>{{items.gender}}</td>
               <td>{{items.offense}}</td>
-              <td>{{items.offenderID}}</td>
+              <td>{{items.id}}</td>
               <td>{{items.caseStatus}}</td>
             </tr>
             {% endfor %}
