--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/results.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/results.html
@@ -26,10 +26,10 @@
         </button>
         <div class="collapse navbar-collapse" id="hamburger">
             <ul class="navbar-nav ms-auto text-center">
-              <li><a class="nav-link" href="welcome.html">Home</a></li>
-              <li><a class="nav-link" href="lookup.html">Lookup</a></li>
-              <li><a class="nav-link" href="filecomplaint.html">File a complaint</a></li>
-              <li><a class="nav-link" href="login.html">Login</a></li>
+              <li><a class="nav-link" href="/homepage">Home</a></li>
+              <li><a class="nav-link" href="/lookup">Lookup</a></li>
+              <li><a class="nav-link" href="/filecomplaint">File a complaint</a></li>
+              <li><a class="nav-link" href="/login">Login</a></li>
             </ul>
         </div>
     </nav>
