fixed layout centering

--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/forgot.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/forgot.html
@@ -32,7 +32,7 @@
     </nav>
 
     <div class="container-fluid">
-        <div class="row" style="margin: 5% 30%;width: fit-content;">
+        <div class="row" style="margin: 5% auto;width: fit-content;">
             <div class="row">
                 <div class="col-md-12">
                     <h1>Reset</h1>
