--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
@@ -69,21 +69,21 @@
           <thead>
             <tr>
               <th scope="col">Offender's Name</th>
+              <th scope="col">Offender ID</th>
               <th scope="col">Age</th>
               <th scope="col">Gender</th>
               <th scope="col">Offense</th>
-              <th scope="col">Offender ID</th>
               <th scope="col">Case Status</th>
             </tr>
           </thead>
           <tbody>
             {% for items in data1 %}
             <tr>
-              <th>{{items.offender}}</th>
+              <td>{{items.offender}}</td>
+              <td>{{items.id}}</td>
               <td>{{items.age}}</td>
               <td>{{items.gender}}</td>
               <td>{{items.offense}}</td>
-              <td>{{items.id}}</td>
               <td>{{items.caseStatus}}</td>
             </tr>
             {% endfor %}
