Fixed excess files and codes

--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/filecomplaint.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/filecomplaint.html
@@ -101,16 +101,14 @@
         function passvalues(){
             getfName = document.getElementById("inputFname").value;
             localStorage.setItem("fNameValue", getfName);
-            getlName = document.getElementById("inputLname").value;
-            localStorage.setItem("lNameValue", getlName);
-            getage = document.getElementById("inputAge").value;
-            localStorage.setItem("ageValue", getage);
+            getage = document.getElementById("inputage").value;
+            localStorage.setItem("ageR", getage);
             getgender = document.getElementById("inputGender").value;
-            localStorage.setItem("genderValue", getgender);
+            localStorage.setItem("genderR", getgender);
             getoffense = document.getElementById("inputOffense").value;
-            localStorage.setItem("offenseValue", getoffense);
+            localStorage.setItem("offenseR", getoffense);
             getcasedetails = document.getElementById("inputCaseDetails").value;
-            localStorage.setItem("caseDetailsValue", getcasedetails);
+            localStorage.setItem("caseDetailsR", getcasedetails);
             return false
         }
     </script>
