--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
@@ -69,7 +69,7 @@
           <thead>
             <tr>
               <th scope="col">Offender's Name</th>
-              <th scope="col">Offender ID</th>
+              <th scope="col">Case ID</th>
               <th scope="col">Age</th>
               <th scope="col">Gender</th>
               <th scope="col">Offense</th>
