--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookupAdmin.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookupAdmin.html
@@ -93,7 +93,7 @@
         <thead>
           <tr>
             <th class="text-center">Offender's Name</th>
-            <th class="text-center">Offender ID</th>
+            <th class="text-center">Case ID</th>
             <th class="text-center">Age</th>
             <th class="text-center">Gender</th>
             <th class="text-center">Offense</th>
