--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/results.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/results.html
@@ -66,15 +66,14 @@
         cell1 = newRow.insertCell(0);
         cell1.innerHTML = localStorage.getItem("fNameValue");
         cell2 = newRow.insertCell(1);
-        cell2.innerHTML = localStorage.getItem("lNameValue");
+        cell2.innerHTML = localStorage.getItem("ageR");
         cell3 = newRow.insertCell(2);
-        cell3.innerHTML = localStorage.getItem("ageValue");
+        cell3.innerHTML = localStorage.getItem("genderR");
         cell4 = newRow.insertCell(3);
-        cell4.innerHTML = localStorage.getItem("genderValue");
+        cell4.innerHTML = localStorage.getItem("offenseR");
         cell5 = newRow.insertCell(4);
-        cell5.innerHTML = localStorage.getItem("offenseValue");
-        cell6 = newRow.insertCell(5);
-        cell6.innerHTML = localStorage.getItem("caseDetailsValue");
+        cell5.innerHTML = localStorage.getItem("caseDetailsR");
+
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
