Added View details button

--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/lookup.html
@@ -74,6 +74,7 @@
               <th scope="col">Gender</th>
               <th scope="col">Offense</th>
               <th scope="col">Case Status</th>
+              <th scope="col">Action</th>
             </tr>
           </thead>
           <tbody>
@@ -85,6 +86,7 @@
               <td>{{items.gender}}</td>
               <td>{{items.offense}}</td>
               <td>{{items.caseStatus}}</td>
+              <td><button type="submit" class="btn btn-primary" href="/release">View Details</button></td>
             </tr>
             {% endfor %}
         </tbody>
