--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/ongoing.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/ongoing.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Release Form</title>
+    <title>Ongoing Form</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <style type="text/css" media="print">
@@ -26,7 +26,7 @@
         
         <div class="row" id="nomargin">
             <div class="col-md-12">
-                <h2>Release FORM</h2>
+                <h2>CASE DETAILS</h2>
             </div>
         </div>
         <div class="row" id="nomargin" id="nomargin">
@@ -36,16 +36,15 @@
                         <p><strong>Name :</strong></p>
                     </div>
                     <div class="col-md-6">
-                        
-                        <p>{{i.offender}}</p>
-                    </div> 
+                        <p> {{i.offender}}</p>
+                    </div>
                 </div>
                 <div class="row" id="nomargin">
                     <div class="col-md-4">
                         <p><strong>Age:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p>{{i.age}}</p>
+                        <p> {{i.age}}</p>
                     </div>
                 </div>
                 <div class="row" id="nomargin">
@@ -53,7 +52,7 @@
                         <p><strong>Gender:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p>{{i.gender}}</p> 
+                        <p> {{i.gender}}</p> 
                     </div>
                 </div>
                 <div class="row" id="nomargin">
@@ -61,7 +60,7 @@
                         <p><strong>Case ID:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p>{{i.id}}</p>
+                        <p> {{i.id}}</p>
                     </div>
                 </div>
                 <div class="row" id="nomargin">
@@ -69,7 +68,7 @@
                         <p><strong>Case:</strong>
                     </div>
                     <div class="col-md-6">
-                        <p>{{i.offense}}</p>
+                        <p> {{i.offense}}</p>
                     </div>
                 </div>
             </div>
@@ -82,18 +81,11 @@
                        <p>______________________</p>
                     </div>
                 </div>
-                <div class="row" id="nomargin">
-                    <div class="col-md">
-                        <p><strong>Date of Release:</strong>
-                    </div>
-                    <div class="col-md">
-                       <p>______________________</p>
-                    </div>
-                </div>
+
             </div>
         </div>
         <h3>Case Description:</h3>
-            <p>{{i.caseDetails}}</p>    
+            <p> {{i.caseDetails}}</p>    
 
 
         <div class="row" id="nomargin">
@@ -111,7 +103,7 @@
             </div>
         </div>
     </div>
-
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
      <script type="text/javascript">
