--- a/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/results.html
+++ b/HTML Wireframe/djangoProject/offenderLocatorApp/templates/htmlFiles/results.html
@@ -42,9 +42,9 @@
             <div class="container-lg">
                 <table class="table table-dark table-striped" id="tableresult">
                     <thead>
+                        {% for  in  %}
                         <tr>
-                            <th>First Name</th>
-                            <th>Last Name</th>
+                            <th>Offender Name</th>
                             <th>Age</th>
                             <th>Gender</th>
                             <th>Offense</th>
